# PKITool

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.py  conanfile.txt  configure  configure.bat  configure.sh  ssl
PKITool/: CCertOperation.h  CCertificate.cpp  CCertificate.h  CMakeLists.txt  COpenSSL.h  PKITool.cpp  PKITool.h
PKITool/Resources/: buildOpenSSL  pkitool.txt  test.sh
src/: CCertOperation.cpp  CCertOperation.h  CCertificate.cpp  CCertificate.h  CMakeLists.txt  COpenSSL.cpp  COpenSSL.h  PKITool.cpp  PKITool.h
src/Resources/: pkitool.ini  pkitool.txt  test.sh
tests/: pkitool_tests.cpp
